--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
             <p>God Bless You.</p>
         </div>
     </div>
+
+    <!-- Video Player -->
+    <div class="video-player">
+        
+        <video width="100%" controls>
+            <source src="Final.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <h1 style="align-self: center; align-items: center;">A Video for you</h1>
+    </div>
+</div>
     
     <!-- Confetti -->
     <canvas id="confetti-canvas"></canvas>
